--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         </div>
     </div>
 
+    <audio id="audio">
+        <source src="./audio/camera-sound.mp3" type="audio/mpeg">
+      </audio>
+
 
     <script src="js/openCamera.js"></script>
 </body>
